--- a/all.css
+++ b/all.css
@@ -83,6 +83,18 @@ main {
     flex-grow: 1; 
 }
 
+/* 테이블 중앙 정렬 */
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* h2 태그 중앙 정렬 */
+h2 {
+    text-align: center;
+    margin-bottom: 2rem; /* 제목 아래에 공백 띄우기 */
+}
+
 /* 푸터 스타일 */
 footer {
     background-color: #343a40;
